fix navbar visiblity

--- a/assets/css/main-responsive.css
+++ b/assets/css/main-responsive.css
@@ -230,12 +230,13 @@ button {
 }
 
 .nav__links li {
+    font-family: "SF UI Display Bold";
     display: inline-flex;
     padding: 0px 1vw;
-}
-
-.nav__links li {
-    font-family: "SF UI Display Bold";
+    -webkit-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    -moz-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    -o-transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
+    transition: all 300ms cubic-bezier(0.505, 0.005, 0.250, 1.000);
 }
 
 .nav__links {
